# kraken

./: CMakeLists.txt  Standard.md
compiler/: CMakeLists.txt  main.c
core/: CMakeLists.txt  darray_i32.h  fundamental_types.h  kdebug.h  random_access_range_i32.h  task.h  thread_pool.h
core/src/: darray_i32.c  kdebug.c  random_access_range_i32.c  task.c  thread_pool.c
parser/: CMakeLists.txt  common.h  kany.h  kcontext.h  kerror.h  kfuncall.h  kset.h  kstring.h  kutils.h  set.c  set.h
parser/src/: kany.c  kcontext.c  kerror.c  kfuncall.c  kset.c  kstring.c  kutils.c  set.c
test/: CMakeLists.txt  main.cpp
test/parser/: context_tests.cpp  funcall_tests.cpp  set_tests.cpp  utils.hpp
